--- a/less/index.less
+++ b/less/index.less
@@ -87,7 +87,6 @@ nav a {
 	}
 }
 
-
 .hero {
 	display: flex;
 	flex-direction: row;
@@ -115,4 +114,19 @@ nav a {
 		font-size: 2em;
 		margin-top: 1em;
 	}
+}
+
+.section-heading {
+	font-size: 1.5em;
+	border-bottom: 1px;
+	border-bottom-color: black;
+	border-bottom-style: solid;
+}
+
+h2 {
+	.section-heading();
+}
+
+table {
+	width: 100%;
 }
