added contact form

--- a/css/index.css
+++ b/css/index.css
@@ -210,3 +210,15 @@ section {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+#contact {
+  display: flex;
+  flex-direction: column;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+form input {
+  width: 50%;
+}
