--- a/less/index.less
+++ b/less/index.less
@@ -145,3 +145,18 @@ section {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+
+#contact {
+	display: flex;
+	flex-direction: column;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+
+	input {
+		width: 50%;
+	}
+}
