--- a/css/index.css
+++ b/css/index.css
@@ -146,7 +146,7 @@ header {
   width: 100%;
   background-color: lightgrey;
 }
-@media (max-width: 800px) {
+@media (max-width: 500px) {
   header {
     height: auto;
   }
@@ -156,9 +156,10 @@ nav {
   width: 100%;
   justify-content: space-around;
 }
-@media (max-width: 800px) {
+@media (max-width: 500px) {
   nav {
     flex-direction: column;
+    align-items: center;
   }
 }
 nav a {
@@ -169,22 +170,54 @@ nav a {
 nav a:hover {
   color: blue;
 }
+@media (max-width: 500px) {
+  nav a {
+    margin: 10px 0;
+  }
+}
 .hero {
   display: flex;
   flex-direction: row;
   padding-top: 50px;
-  background-image: url("hero-background.jpg");
+}
+@media (max-width: 800px) {
+  .hero {
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .hero {
+    padding-top: 180px;
+  }
 }
 .hero-left {
   width: 50%;
 }
+@media (max-width: 800px) {
+  .hero-left {
+    width: 100%;
+    max-height: 400px;
+    display: flex;
+    justify-content: center;
+  }
+}
 .hero-left img {
   width: 100%;
 }
+@media (max-width: 800px) {
+  .hero-left img {
+    width: 400px;
+  }
+}
 .hero-right {
   width: 50%;
-  padding: 80px;
+  padding: 80px 0px 80px 80px;
   background: none;
+}
+@media (max-width: 800px) {
+  .hero-right {
+    width: 100%;
+  }
 }
 .hero-right h1 {
   font-size: 3em;
@@ -228,6 +261,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin: 0 auto;
 }
 form input {
   width: 50%;
