--- a/less/index.less
+++ b/less/index.less
@@ -53,7 +53,9 @@ table {
     box-sizing: border-box;
 }
 
-@tablet: max-width: 800px;
+@phone: 500px;
+
+@tablet: 800px;
 
 html, body {
     height: 100%;
@@ -71,7 +73,7 @@ header {
 	height: 50px;
 	width: 100%;
 	background-color: lightgrey;
-	@media (@tablet) {
+	@media (max-width: @phone) {
 		height: auto;
 	}
 }
@@ -80,9 +82,9 @@ nav {
 	display: flex;
 	width: 100%;
 	justify-content: space-around;
-	@media (@tablet) {
+	@media (max-width: @phone) {
 		flex-direction: column;
-		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -90,11 +92,11 @@ nav a {
 	text-decoration: none;
 	color: black;
 	font-weight: bold;
-
 	&:hover {
 		color: blue;
-
-	@media (@tablet)
+	}
+	@media (max-width: @phone) {
+		margin: 10px 0;
 	}
 }
 
@@ -102,20 +104,41 @@ nav a {
 	display: flex;
 	flex-direction: row;
 	padding-top: 50px;
-	background-image: url("hero-background.jpg");
+	@media (max-width: @tablet) {
+		flex-direction: column;
+	}
+	@media (max-width: @phone) {
+		padding-top: 180px;
+	}
 }
 
 .hero-left {
 	width: 50%;
+
+	@media (max-width: @tablet) {
+		width: 100%;
+		max-height: 400px;
+		display: flex;
+		justify-content: center;
+	}
+
 	img {
 		width:100%;
+
+		@media (max-width: @tablet) {
+			width: 400px;
+		}
 	}
 }
 
 .hero-right {
 	width: 50%;
-	padding: 80px;
+	padding: 80px 0px 80px 80px;
 	background: none;
+
+	@media (max-width: @tablet) {
+		width: 100%;
+	}
 
 	h1 {
 		font-size: 3em;
@@ -166,6 +189,7 @@ form {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin: 0 auto;
 
 	input {
 		width: 50%;
