--- a/css/index.css
+++ b/css/index.css
@@ -134,10 +134,6 @@ html,
 body {
   height: 100%;
 }
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
 header {
   display: flex;
   align-items: center;
@@ -175,100 +171,113 @@ nav a:hover {
     margin: 10px 0;
   }
 }
-.hero {
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+.container .hero {
   display: flex;
   flex-direction: row;
   padding-top: 50px;
 }
 @media (max-width: 800px) {
-  .hero {
+  .container .hero {
     flex-direction: column;
   }
 }
 @media (max-width: 500px) {
-  .hero {
+  .container .hero {
     padding-top: 180px;
   }
 }
-.hero-left {
+.container .hero-left {
   width: 50%;
 }
 @media (max-width: 800px) {
-  .hero-left {
+  .container .hero-left {
     width: 100%;
     max-height: 400px;
     display: flex;
     justify-content: center;
   }
 }
-.hero-left img {
+.container .hero-left img {
   width: 100%;
 }
 @media (max-width: 800px) {
-  .hero-left img {
+  .container .hero-left img {
     width: 400px;
   }
 }
-.hero-right {
+.container .hero-right {
   width: 50%;
   padding: 80px 0px 80px 80px;
   background: none;
 }
 @media (max-width: 800px) {
-  .hero-right {
+  .container .hero-right {
     width: 100%;
   }
 }
-.hero-right h1 {
+.container .hero-right h1 {
   font-size: 3em;
 }
-.hero-right p {
-  font-size: 2em;
+.container .hero-right p {
+  font-size: 1.5em;
   margin-top: 1em;
 }
-.section-heading {
+.container .section-heading {
   font-size: 1.5em;
   border-bottom: 1px;
   border-bottom-color: black;
   border-bottom-style: solid;
+  text-align: center;
+  margin-bottom: 20px;
 }
-h2 {
+.container h2 {
   font-size: 1.5em;
   border-bottom: 1px;
   border-bottom-color: black;
   border-bottom-style: solid;
+  text-align: center;
+  margin-bottom: 20px;
 }
-table {
+.container table {
   width: 100%;
 }
-th {
+.container th {
   font-weight: bold;
   text-align: left;
   height: 20px;
 }
-td {
+.container td {
   height: 20px;
 }
-section {
+.container section {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-#contact {
+.container #contact {
   display: flex;
   flex-direction: column;
 }
-form {
+.container form {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 50%;
   margin: 0 auto;
 }
-form input {
-  width: 50%;
+.container form input {
+  width: 100%;
 }
-form #message {
+.container form label {
+  margin-top: 20px;
+}
+.container form #message {
   height: 50px;
+  margin-bottom: 20px;
 }
-form button {
-  width: 50%;
+.container form button {
+  width: 100%;
 }
