--- a/less/index.less
+++ b/less/index.less
@@ -61,11 +61,6 @@ html, body {
     height: 100%;
 }
 
-.container {
-	max-width: 1200px;
-	margin: 0 auto;
-}
-
 header {
 	display: flex;
 	align-items: center;
@@ -100,106 +95,119 @@ nav a {
 	}
 }
 
-.hero {
-	display: flex;
-	flex-direction: row;
-	padding-top: 50px;
-	@media (max-width: @tablet) {
-		flex-direction: column;
-	}
-	@media (max-width: @phone) {
-		padding-top: 180px;
-	}
-}
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 10px;
 
-.hero-left {
-	width: 50%;
-
-	@media (max-width: @tablet) {
-		width: 100%;
-		max-height: 400px;
+	.hero {
 		display: flex;
-		justify-content: center;
-	}
-
-	img {
-		width:100%;
-
+		flex-direction: row;
+		padding-top: 50px;
 		@media (max-width: @tablet) {
-			width: 400px;
+			flex-direction: column;
+		}
+		@media (max-width: @phone) {
+			padding-top: 180px;
 		}
 	}
-}
 
-.hero-right {
-	width: 50%;
-	padding: 80px 0px 80px 80px;
-	background: none;
+	.hero-left {
+		width: 50%;
 
-	@media (max-width: @tablet) {
+		@media (max-width: @tablet) {
+			width: 100%;
+			max-height: 400px;
+			display: flex;
+			justify-content: center;
+		}
+
+		img {
+			width:100%;
+
+			@media (max-width: @tablet) {
+				width: 400px;
+			}
+		}
+	}
+
+	.hero-right {
+		width: 50%;
+		padding: 80px 0px 80px 80px;
+		background: none;
+
+		@media (max-width: @tablet) {
+			width: 100%;
+		}
+
+		h1 {
+			font-size: 3em;
+		}
+
+		p {
+			font-size: 1.5em;
+			margin-top: 1em;
+		}
+	}
+
+	.section-heading {
+		font-size: 1.5em;
+		border-bottom: 1px;
+		border-bottom-color: black;
+		border-bottom-style: solid;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	h2 {
+		.section-heading();
+	}
+
+	table {
 		width: 100%;
 	}
 
-	h1 {
-		font-size: 3em;
+	th {
+		font-weight: bold;
+		text-align: left;
+		height: 20px;
 	}
 
-	p {
-		font-size: 2em;
-		margin-top: 1em;
+	td {
+		height: 20px;
 	}
-}
 
-.section-heading {
-	font-size: 1.5em;
-	border-bottom: 1px;
-	border-bottom-color: black;
-	border-bottom-style: solid;
-}
+	section {
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
 
-h2 {
-	.section-heading();
-}
+	#contact {
+		display: flex;
+		flex-direction: column;
+	}
 
-table {
-	width: 100%;
-}
-
-th {
-	font-weight: bold;
-	text-align: left;
-	height: 20px;
-}
-
-td {
-	height: 20px;
-}
-
-section {
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-#contact {
-	display: flex;
-	flex-direction: column;
-}
-
-form {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	margin: 0 auto;
-
-	input {
+	form {
+		display: flex;
+		flex-direction: column;
 		width: 50%;
-	}
+		margin: 0 auto;
 
-	#message {
-		height: 50px;
-	}
+		input {
+			width: 100%;
+		}
 
-	button {
-		width: 50%;
+		label {
+			margin-top: 20px;
+		}
+
+		#message {
+			height: 50px;
+			margin-bottom: 20px;
+		}
+
+		button {
+			width: 100%;
+		}
 	}
 }
